Source/WebKit/UIProcess/API/wpe/qt/WPEQtView.cpp
@@ -152,7 +152,7 @@ void WPEQtView::notifyLoadChangedCallback(WebKitWebView*, WebKitLoadEvent event,
 
     if (statusSet) {
         WPEQtViewLoadRequestPrivate loadRequestPrivate(view->url(), loadStatus, "");
-        std::unique_ptr<WPEQtViewLoadRequest> loadRequest = makeUnique<WPEQtViewLoadRequest>(loadRequestPrivate);
+        std::unique_ptr<WPEQtViewLoadRequest> loadRequest = std::make_unique<WPEQtViewLoadRequest>(loadRequestPrivate);
         Q_EMIT view->loadingChanged(loadRequest.get());
     }
 }
@@ -168,7 +168,7 @@ void WPEQtView::notifyLoadFailedCallback(WebKitWebView*, WebKitLoadEvent, const 
         loadStatus = WPEQtView::LoadStatus::LoadFailedStatus;
 
     WPEQtViewLoadRequestPrivate loadRequestPrivate(QUrl(QString(failingURI)), loadStatus, error->message);
-    std::unique_ptr<WPEQtViewLoadRequest> loadRequest = makeUnique<WPEQtViewLoadRequest>(loadRequestPrivate);
+    std::unique_ptr<WPEQtViewLoadRequest> loadRequest = std::make_unique<WPEQtViewLoadRequest>(loadRequestPrivate);
     Q_EMIT view->loadingChanged(loadRequest.get());
 }
 
@@ -387,7 +387,6 @@ void WPEQtView::loadHtml(const QString& html, const QUrl& baseUrl)
 }
 
 struct JavascriptCallbackData {
-    WTF_MAKE_STRUCT_FAST_ALLOCATED;
     JavascriptCallbackData(QJSValue cb, QPointer<WPEQtView> obj)
         : callback(cb)
         , object(obj) { }
@@ -447,7 +446,7 @@ static void jsAsyncReadyCallback(GObject* object, GAsyncResult* result, gpointer
 */
 void WPEQtView::runJavaScript(const QString& script, const QJSValue& callback)
 {
-    std::unique_ptr<JavascriptCallbackData> data = makeUnique<JavascriptCallbackData>(callback, QPointer<WPEQtView>(this));
+    std::unique_ptr<JavascriptCallbackData> data = std::make_unique<JavascriptCallbackData>(callback, QPointer<WPEQtView>(this));
     webkit_web_view_run_javascript(m_webView.get(), script.toUtf8().constData(), nullptr, jsAsyncReadyCallback, data.release());
 }
 
